<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d0"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home_funsharing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/d10"
                    android:src="@mipmap/home_funsharing" />

                <TextView
                    style="@style/TxtWrapWrap18"
                    android:layout_marginTop="@dimen/d2"
                    android:text="@string/home_funsharing" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/d1"
                android:layout_height="match_parent"
                android:background="@color/colorGrayf0" />

            <LinearLayout
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home_troublesolution"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/d10"
                    android:src="@mipmap/home_troublesolution" />

                <TextView
                    style="@style/TxtWrapWrap18"
                    android:layout_marginTop="@dimen/d2"
                    android:text="@string/home_troublesolution" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d1"
            android:background="@color/colorGrayf0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d0"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >

            <LinearLayout
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home_livingexpenses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/d10"
                    android:src="@mipmap/home_livingexpenses" />

                <TextView
                    style="@style/TxtWrapWrap18"
                    android:layout_marginTop="@dimen/d2"
                    android:text="@string/home_livingexpenses" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/d1"
                android:layout_height="match_parent"
                android:background="@color/colorGrayf0" />

            <LinearLayout
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/iv_home_housekeepingservice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/d10"
                    android:src="@mipmap/home_housekeepingservice" />

                <TextView
                    style="@style/TxtWrapWrap18"
                    android:layout_marginTop="@dimen/d2"
                    android:text="@string/home_housekeepingservice" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d1"
            android:background="@color/colorGrayf0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d0"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >

            <LinearLayout
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home_consultantteam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/d10"
                    android:src="@mipmap/home_consultantteam" />

                <TextView
                    style="@style/TxtWrapWrap18"
                    android:layout_marginTop="@dimen/d2"
                    android:text="@string/home_consultantteam" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/d1"
                android:layout_height="match_parent"
                android:background="@color/colorGrayf0" />

            <LinearLayout
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home_specialgifts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/d10"
                    android:src="@mipmap/home_specialgifts" />

                <TextView
                    style="@style/TxtWrapWrap18"
                    android:layout_marginTop="@dimen/d2"
                    android:text="@string/home_specialgifts" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d1"
            android:background="@color/colorGrayf0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d0"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >

            <LinearLayout
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home_familyworship"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/d10"
                    android:src="@mipmap/home_familyworship" />

                <TextView
                    style="@style/TxtWrapWrap18"
                    android:layout_marginTop="@dimen/d2"
                    android:text="@string/home_familyworship" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/d1"
                android:layout_height="match_parent"
                android:background="@color/colorGrayf0" />

            <LinearLayout
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home_weddingblessing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/d10"
                    android:src="@mipmap/home_weddingblessing" />

                <TextView
                    style="@style/TxtWrapWrap18"
                    android:layout_marginTop="@dimen/d2"
                    android:text="@string/home_weddingblessing" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <com.cxmax.library.FloatingView
        android:id="@+id/float_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:scaleType="fitXY"
        android:src="@mipmap/ad1"
        android:visibility="gone"
        app:draggable="false" />
</FrameLayout>

